<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ios="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.share.phone.AdminActivity">

    <ios.ui.UINavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        ios:hideback="true" />

    <uc.TableHeader
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/navigationBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical">


        <uc.ListRow
            android:id="@+id/up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="onClick"
            ios:marginleftlength="15"
            ios:showarrow="true">

            <TextView
                android:id="@+id/up_down1"
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:text="@string/job_up" />

            <TextView
                style="@style/L4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/up_down1"
                android:layout_marginBottom="5dp"
                android:text="@string/job_up_l" />

        </uc.ListRow>

        <uc.ListRow
            android:id="@+id/down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="onClick"
            ios:marginleftlength="15"
            ios:showarrow="true">

            <TextView
                android:id="@+id/down1"
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:text="@string/job_down" />

            <TextView
                style="@style/L4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/down1"
                android:layout_marginBottom="5dp"
                android:text="@string/job_down_l" />

        </uc.ListRow>

        <uc.ListRow
            android:id="@+id/fault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="onClick"
            ios:marginleftlength="15"
            ios:showarrow="true">

            <TextView
                android:id="@+id/fault1"
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:text="@string/job_fault" />

            <TextView
                style="@style/L4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/fault1"
                android:layout_marginBottom="5dp"
                android:text="@string/job_fault_l" />

        </uc.ListRow>

        <uc.ListRow
            android:id="@+id/repair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="onClick"
            ios:marginleftlength="15"
            ios:showarrow="true">

            <TextView
                android:id="@+id/repair1"
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:text="@string/job_repair" />

            <TextView
                style="@style/L4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/repair1"
                android:layout_marginBottom="5dp"
                android:text="@string/job_repair_l" />

        </uc.ListRow>

        <uc.ListRow
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="onClick"
            ios:showarrow="true">

            <TextView
                android:id="@+id/data1"
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:text="@string/job_data" />

            <TextView
                style="@style/L4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/data1"
                android:layout_marginBottom="5dp"
                android:text="@string/job_data_l" />

        </uc.ListRow>

    </LinearLayout>


</RelativeLayout>
