<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/W"
    android:gravity="center_horizontal">

    <ios.ui.UINavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        />

    <ImageView
        android:id="@+id/log_img"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/usernameEditText"
        style="@style/H1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/log_img"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/boder_edittext"
        android:gravity="center"
        android:hint="@string/tv_log_logname" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/H1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/usernameEditText"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/boder_edittext"
        android:gravity="center"
        android:hint="@string/et_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_guestlogin_login"
        style="@style/login_button_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/passwordEditText"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:text="立即注册"
        android:textColor="#fff"
        android:textSize="20sp" />

    <!--<TextView-->
    <!--android:id="@+id/txt_guestlogin_password"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_below="@id/btn_guestlogin_login"-->
    <!--android:layout_marginRight="35dp"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:clickable="true"-->
    <!--android:text="@string/tv_code_password"-->
    <!--android:textColor="#4099C1" />-->

    <TextView
        style="@style/W3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/login_bottom" />

</RelativeLayout>
