<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ios="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ios.ui.UINavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        ios:hideback="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/navigationBar"
        android:scrollbars="none">


        <LinearLayout
            android:id="@+id/L1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/re"
                android:layout_width="match_parent"
                android:layout_height="213dp"
                android:background="@mipmap/my_bg">

                <uc.CircleImageView
                    android:id="@+id/mp_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/menu_work" />

                <TextView
                    android:id="@+id/mp_username"
                    style="@style/W1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mp_avatar"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical" />
                <TextView
                    android:id="@+id/mp_name"
                    android:textColor="#c8c8c8"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mp_username"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical" />

            </RelativeLayout>

            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/W"
                android:stretchColumns="1">

                <uc.TableRow
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    ios:marginleftlength="15">

                    <TextView
                        style="@style/H2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/user_phone" />

                    <TextView
                        android:id="@+id/mp_userphone"
                        style="@style/L3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        android:gravity="end" />
                </uc.TableRow>

                <uc.TableRow
                    android:layout_width="match_parent"
                    android:layout_height="44dp">

                    <TextView
                        style="@style/H2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/user_email" />

                    <TextView
                        android:id="@+id/mp_useremail"
                        style="@style/L3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        android:gravity="end" />
                </uc.TableRow>
            </TableLayout>

            <uc.TableHeader
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TableLayout
                android:id="@+id/TableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/W"
                android:stretchColumns="1">


                <uc.TableRow
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    ios:marginleftlength="15">

                    <TextView
                        style="@style/H2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/user_type" />

                    <TextView
                        android:id="@+id/mp_usertype"
                        style="@style/L3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        android:gravity="end" />
                </uc.TableRow>


                <uc.TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ios:marginleftlength="15">

                    <TextView
                        style="@style/H2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/user_role" />

                    <TextView
                        android:id="@+id/mp_userrole"
                        style="@style/L3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        android:gravity="end" />
                </uc.TableRow>

                <uc.TableRow
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    ios:marginleftlength="15">

                    <TextView
                        style="@style/H2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/user_status" />

                    <TextView
                        android:id="@+id/mp_userstatus"
                        style="@style/L3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        android:gravity="end" />
                </uc.TableRow>

                <uc.TableRow
                    android:layout_width="match_parent"
                    android:layout_height="44dp">

                    <TextView
                        style="@style/H2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/user_remark" />

                    <TextView
                        android:id="@+id/mp_userremark"
                        style="@style/L3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        android:gravity="end" />
                </uc.TableRow>

            </TableLayout>

            <uc.TableHeader
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <uc.TableRow
                android:id="@+id/mp_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                ios:showarrow="true">

                <TextView
                    style="@style/H2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/user_password" />
            </uc.TableRow>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>




