<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ios="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.share.phone.MyPasswordActivity">


    <ios.ui.UINavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="44dp" />


    <uc.TableHeader
        android:id="@+id/TableHeader"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_below="@id/navigationBar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TableHeader"
        android:background="@color/W"
        android:stretchColumns="1">

        <uc.TableRow
            android:layout_width="match_parent"
            android:layout_height="44dp"
            ios:marginleftlength="15">

            <TextView
                style="@style/H2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="5dp"
                android:text="@string/mpw_old" />

            <EditText
                android:id="@+id/mpw_old"
                style="@style/H2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:background="@drawable/boder_edittext"
                android:gravity="start|center_vertical"
                android:hint="该密码必须和登录密码一致"
                android:inputType="textPassword"
                android:padding="2dp" />
        </uc.TableRow>

        <uc.TableRow
            android:layout_width="match_parent"
            android:layout_height="44dp"
            ios:marginleftlength="15">

            <TextView
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="5dp"
                android:text="@string/mpw_new" />

            <EditText
                android:id="@+id/mpw_new"
                style="@style/H2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:background="@drawable/boder_edittext"
                android:gravity="start|center_vertical"
                android:hint="请输入字母，数字或符号"
                android:inputType="textPassword"
                android:padding="2dp" />
        </uc.TableRow>

        <uc.TableRow
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="5dp"
                android:text="@string/mpw_again" />

            <EditText
                android:id="@+id/mpw_again"
                style="@style/H2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:background="@drawable/boder_edittext"
                android:gravity="start|center_vertical"
                android:hint="该密码必须和新密码一致"
                android:inputType="textPassword"
                android:padding="2dp" />
        </uc.TableRow>

    </TableLayout>

</RelativeLayout>
